<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app_grifo"
    tools:context=".ui.view.activity.RegistrarUsuarioActivity">

    <LinearLayout
        android:id="@+id/linLayRegistrarUsuario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/background_app_grifo_component"
                android:gravity="center"
                android:text="Registrar Usuario"
                android:textColor="@color/txtInfoEditTittle"
                android:textSize="35dp"
                android:textStyle="italic|bold" />
        </androidx.cardview.widget.CardView>

        <!--Registrar Usuario-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardDatosPersonales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/cardTitulo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_app_grifo_component"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtApePaterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:drawableEnd="@drawable/ic_edit_label"
                    android:drawableTint="@color/background_app_grifo_icons"
                    android:hint="@string/ape_paterno"
                    android:inputType="none"
                    android:textColorHint="@color/txtInfoEditTittle"
                    android:textSize="17dp"
                    android:theme="@style/EditTextTheme" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtapeMaterno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:drawableEnd="@drawable/ic_edit_label"
                    android:drawableTint="@color/background_app_grifo_icons"
                    android:hint="@string/ape_materno"
                    android:inputType="none"
                    android:textColorHint="@color/txtInfoEditTittle"
                    android:textSize="17dp"
                    android:theme="@style/EditTextTheme"

                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtUserNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:drawableEnd="@drawable/ic_edit_label"
                    android:drawableTint="@color/background_app_grifo_icons"
                    android:hint="@string/nombre_usuario"
                    android:inputType="none"
                    android:textColorHint="@color/txtInfoEditTittle"
                    android:textSize="17dp"
                    android:theme="@style/EditTextTheme" />



                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:drawableEnd="@drawable/ic_email"
                    android:drawableTint="@color/background_app_grifo_icons"
                    android:hint="@string/userEmail"
                    android:textColorHint="@color/txtInfoEditTittle"
                    android:textSize="17dp"
                    android:theme="@style/EditTextTheme" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:drawableEnd="@drawable/ic_lock"
                    android:drawableTint="@color/background_app_grifo_icons"
                    android:hint="@string/label_password"
                    android:inputType="none"
                    android:textColorHint="@color/txtInfoEditTittle"
                    android:textSize="17dp"
                    android:theme="@style/EditTextTheme" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/select_foto"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:onClick="abrirGaleria"
                        android:text="@string/label_foto"
                        android:textColor="@color/txtInfoEditTittle"
                        android:textSize="18sp"
                        android:textStyle="italic|bold" />


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignTop="@id/select_foto"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@id/select_foto"
                        android:clickable="true"
                        android:contentDescription="@string/add_photo"
                        android:focusable="true"
                        android:onClick="abrirGaleria"
                        android:src="@drawable/ic_add_foto" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtAfiliarPersona"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="20dp"
                    android:drawableEnd="@drawable/ic_company"
                    android:drawableTint="@color/background_app_grifo_icons"
                    android:gravity="center"
                    android:text="@string/afiliarPer"
                    android:textColor="@color/txtInfoEditTittle"
                    android:textSize="18sp"
                    android:textStyle="italic|bold"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/tvAfiliarNum"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="20dp"
                    android:drawableEnd="@drawable/ic_company"
                    android:drawableTint="@color/background_app_grifo_icons"
                    android:gravity="center"
                    android:text="VerificarNumero"
                    android:textColor="@color/txtInfoEditTittle"
                    android:textSize="18sp"
                    android:textStyle="italic|bold"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/cardDatosPersonales">

            <TextView
                android:id="@+id/txtIniciarSesion"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:onClick="iniciarSesion"
                android:text="Regresar"
                android:textColor="@color/txtInfoEditTittle"
                android:textSize="18sp"
                android:textStyle="italic|bold" />

            <Button
                android:id="@+id/btnRegistrarUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#90EE90"
                android:drawableEnd="@drawable/ic_company"
                android:drawableTint="@color/background_app_grifo_icons"
                android:text="Registrarse"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>